--- a/periscope-web/src/main/webapp/pages/project/report/allReports/applicantDate.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/applicantDate.xhtml
@@ -32,11 +32,11 @@
 
                     </p:selectOneMenu>
                     <h:outputText value="Inicial:"/>
-                    <p:calendar  value="#{applicantDateReport.filtro.inicio}" mindate="01/01/2000" maxdate="31/12/2020" locale="pt" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy">
+                    <p:calendar  value="#{applicantDateReport.filtro.inicio}" mindate="#{applicantDateReport.minDate}" maxdate="#{applicantDateReport.maxDate}" locale="pt" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy">
                     </p:calendar>
 
                     <h:outputText value="Final:"/>
-                    <p:calendar value="#{applicantDateReport.filtro.fim}" mindate="02/01/2000" maxdate="31/12/2020" locale="pt" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy">
+                    <p:calendar value="#{applicantDateReport.filtro.fim}" mindate="#{applicantDateReport.minDate}" maxdate="#{applicantDateReport.maxDate}" locale="pt" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy">
                     </p:calendar>
 
                     <p:commandButton action="#{applicantDateReport.applicantDateChart()}" update="tudo" value="Pesquisar"></p:commandButton>
