--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainInventor.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainInventor.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:i="http://www.example.com/jsf">
 
 
     <ui:composition template="/template/template.xhtml">
@@ -18,39 +19,8 @@
             <h:form styleClass="container">
 
                 <br />
-                <center>
-                    <h4>Número de inventores</h4>
-                    <p:spinner value="#{mainInventorController.limit}" min="5" max="20"
-                               style="padding:0 20px 0 0">
-                        <p:ajax listener="#{mainInventorController.mainInventorChart()}"
-                                update="@form" process="@this" />
-                    </p:spinner>
-                </center>
-                <br/>
-                <p:selectBooleanCheckbox id="complete" itemLabel="#{msgs['completo']}"
-                                         value="#{mainInventorController.filtro.complete}">
-                    <p:ajax update="tudo" 
-                            listener="#{mainInventorController.mainInventorChart()}" />
-                </p:selectBooleanCheckbox>
-                <h:outputScript library="js" name="locales.js"></h:outputScript>          
 
-                <h:panelGrid columns="7" cellpadding="5">  
-                    <h:outputText value="Defina o período de interesse:"/> 
-                    <p:selectOneMenu value="#{mainInventorController.filtro.selecionaData}">
-                            <f:selectItem itemLabel="Data de Publicação" itemValue="0" />  
-                            <f:selectItem itemLabel="Data de Depósito" itemValue="1" />  
-
-                        </p:selectOneMenu>
-                    <h:outputText value="Inicial:"/>
-                    <p:calendar value="#{mainInventorController.filtro.inicio}" mindate="#{mainInventorController.minDate}" maxdate="#{mainInventorController.maxDate}" locale="pt" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy" />
-
-
-                    <h:outputText value="Final:"/>
-                    <p:calendar value="#{mainInventorController.filtro.fim}" mindate="#{mainInventorController.minDate}" maxdate="#{mainInventorController.maxDate}" locale="pt" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy"/>
-                    
-                    <p:commandButton action="#{mainInventorController.mainInventorChart()}" update="tudo" value="Pesquisar"></p:commandButton>
-
-                </h:panelGrid>
+                <i:filtro controller="#{mainInventorController}" />
 
                 <h:panelGrid columns="1" id="tudo" styleClass="container" >
                     
