--- a/periscope-web/src/main/webapp/pages/project/harmonization/dialogApplicantRule.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/dialogApplicantRule.xhtml
@@ -7,7 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <f:view contentType="text/html">
-	<p:dialog id="sugestions" widgetVar="sugestionsDialog" modal="true"
+	<p:dialog id="applicantSugestions" widgetVar="sugestionsDialog" modal="true"
 		header="Criar regra" resizable="false">
 		<h:panelGrid columns="2">		
 			<h:outputLabel value="Nome harmonizado " style="font-weight:bold"/>				
