--- a/periscope-web/src/main/webapp/pages/project/harmonization/harmonizationHome.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/harmonizationHome.xhtml
@@ -12,6 +12,9 @@
 		<ui:include src="/template/flashmessages.xhtml" />
 		<h2>Harmonização</h2>
 		<br/>
+		<h:form>		
+			<p:commandButton value="Listar Regras Criadas" action="listRule" ajax="false" />
+		</h:form>
 		<p:tabView id="tabView">  
 		
 			<p:tab id="tab1" title="Depositantes">
