--- a/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
@@ -12,9 +12,6 @@
 		<ui:include src="/template/flashmessages.xhtml" />
 		<h2>Regras de Harmonização</h2>
 		<br/>
-		<h:form>		
-			<p:commandButton value="Criar Nova Regra" action="harmonizationHome" ajax="false" />
-		</h:form>
 		<p:tabView id="tabView"> 
 			<p:tab id="tab1" title="Depositantes">				
 				<p:dataTable id="ruleApplicants" var="rule" style="font-size:12px"
@@ -95,10 +92,13 @@
 						<center>
 							<h:form style="margin-bottom:0px">
 								<h:commandLink value="Aplicar"
-									style="color:white;margin-right: 10px" class="btn btn-inverse">	
+									style="color:white;margin-right: 10px" class="btn btn-inverse"
+                                                                        action="#{ruleController.apply(rule.id.toString())}">	
 								</h:commandLink>
 								<h:commandLink value="Deletar"
-									style="color:white;margin-right: 10px" class="btn btn-inverse">	
+									style="color:white;margin-right: 10px" class="btn btn-inverse"
+									onclick="if(!confirm('Deseja excluir esta regra ?')) { return false; }" 
+									action="#{ruleController.delete(rule.id.toString())}">
 								</h:commandLink>							
 							</h:form>
 						</center>
