--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainInventor.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainInventor.xhtml
@@ -31,7 +31,7 @@
 
                 <p:dataTable id="inventors"
                              emptyMessage="Nenhum inventor cadastrado." var="pair"
-                             value="#{mainInventorController.pairs}" style="height:300px">
+                             value="#{mainInventorController.pairs}">
 
                     <p:column headerText="Nome">
                         <h:outputText value="#{pair.key}" />
