--- a/periscope-web/src/main/webapp/pages/project/report/allReports/applicantDate.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/applicantDate.xhtml
@@ -25,8 +25,7 @@
 
 
                     <p:lineChart id="line" value="#{applicantDateReport.model}" rendered="#{applicantDateReport.model.series.get(0).getData().size()!=0}"
-                                 legendPosition="e" title="Número de depositos por ano"
-                                 style="width:600px; height:300px" />
+                                 legendPosition="e" title="Número de depositos por ano"/>
 
                     <h:column>
                         <p:graphicImage />
