O menu de Relatórios não aparece se não houver Patentes no Projeto.

--- a/periscope-web/src/main/webapp/pages/project/report/allReports/priorityDate.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/priorityDate.xhtml
@@ -16,7 +16,7 @@
 
             <h:form id="chart" styleClass="container">
 
-                <h1>#{msgs['priority']} / #{msgs['year']}</h1>
+                <h1>#{msgs['priorities']} / #{msgs['year']}</h1>
                 <br/>
                 <p:selectBooleanCheckbox id="complete" itemLabel="#{msgs['completo']}"
                                          value="#{priorityDateController.filtro.complete}">
