--- a/periscope-web/src/main/webapp/pages/project/projectList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/projectList.xhtml
@@ -55,11 +55,11 @@
 						<h:form style="margin-bottom:0px">
 							<h:commandLink value="Abrir" style="color:white;margin-right: 10px"
 								class="btn btn-inverse" action="#{projectSession.openProject(project.id.toString())}"/>
-							<h:commandLink value="Editar" action="editProject" rendered="#{project.owner.id eq currentUser.id}"
+							<h:commandLink value="Editar" action="editProject" rendered="#{project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10}"
 								style="color:white;margin-right: 10px" class="btn btn-inverse">
 								<f:param name="projectId" value="#{project.id.toString()}"/>	
 							</h:commandLink>
-							<h:commandLink value="Deletar" style="color:white" rendered="#{project.owner.id eq currentUser.id}"
+							<h:commandLink value="Deletar" style="color:white" rendered="#{project.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10}"
 								onclick="if(!confirm('Deseja excluir este projeto e os dados relacionados ?')) { return false; }"
 								class="btn btn-inverse" action="#{projectController.delete(project.id.toString())}"/>
 						</h:form>
